fix(consonant-blocks): fix button spacing regardless of variant

--- a/templates/consonant/styles/styles.css
+++ b/templates/consonant/styles/styles.css
@@ -262,11 +262,13 @@ a.button:any-link {
   display: inline-block;
 }
 
-a.button:first-child {
+p.button-container > :first-child,
+p.button-container > :first-child a.button {
   margin-left: 0;
 }
 
-a.button:last-child {
+p.button-container > :last-child,
+p.button-container > :last-child a.button {
   margin-right: 0;
 }
 
